--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 body {
+  padding: 0 62px;
   margin: 0;
 }
 header {
   position: fixed;
-  width: 100%;
+  width: calc(100% - 124px);
 }
 
 .header-wrapper {
@@ -32,34 +33,34 @@ header {
   text-decoration: none;
 }
 
-.block1-top-block {
+.block1-wrapper {
+  margin: 0 -62px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: linear-gradient(178deg, #ffffff, #e3e3e3);
 }
 
-.block1-top-block img {
-  width: 50%;
+.block1-wrapper img {
   height: 602px;
+  width: 100%;
 }
 
-.block1-top-block div {
+.block1-wrapper div {
   width: 50%;
-  margin: 8px;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 
-.block1-top-block button {
+.block1-wrapper button {
   padding: 12px;
   background-color: #f6c402;
   border-radius: 32px;
   border: none;
 }
 
-.block1-top-block h4 {
+.block1-wrapper h4 {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -69,9 +70,11 @@ h1 {
   font-family: "Cactus Classical Serif", serif;
   font-weight: 500;
   font-style: normal;
+  font-size: 52px;
 }
 
 .block2-wrapper {
+  margin: 0 -62px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -92,4 +95,48 @@ h1 {
   text-align: center;
   padding: 10px;
   box-sizing: border-box;
+}
+
+.block3-container-services {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.block3-container-item {
+  position: relative;
+  flex: 1 1 calc(33% - 20px);
+  min-width: 280px;
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+
+.block3-container-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+}
+
+.block3-container-item div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.block3-container-item h3 {
+  margin: 0;
+  font-size: 18px;
+}
+
+.block3-container-item:hover img {
+  transform: scale(1.1);
 }
