--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   padding: 0 62px;
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 header {
@@ -32,7 +33,7 @@ main h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 62px;
+  padding-left: 62px;
 }
 
 header a img {
@@ -57,8 +58,7 @@ header a img {
 a {
   text-decoration: none;
   color: black;
-  font-weight: 600;
-  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 
 .block1-wrapper {
@@ -93,6 +93,8 @@ button {
   border: none;
   font-size: 16px;
   cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 
 button:hover {
@@ -104,7 +106,6 @@ button:active {
 }
 
 .text-container h4 {
-  font-family: "Roboto", sans-serif;
   font-size: 22px;
   margin: 22px 0;
   font-weight: 300;
@@ -114,7 +115,6 @@ button:active {
 h4,
 h5,
 h6 {
-  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 300;
 }
@@ -178,6 +178,18 @@ h1 {
   flex: 1 1 calc(33% - 20px);
   min-width: 280px;
   overflow: hidden;
+
+  ul {
+    font-weight: 300;
+    text-align: left;
+    padding: 0;
+    font-size: 14px;
+    margin: 0;
+  }
+
+  li {
+    padding-top: 6px;
+  }
 }
 
 .block3-container-item img {
@@ -193,7 +205,7 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   background: #f6c402;
-  padding: 10px 20px;
+  padding: 6px 20px;
   border-radius: 5px;
   text-align: center;
 }
@@ -296,9 +308,9 @@ footer img {
   border-radius: 64px;
 }
 
-.block5-item-container h3 {
+.block5-item-container h4 {
   text-align: end;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 .block6-wrapper {
@@ -368,6 +380,10 @@ footer img {
     padding-right: 12px;
   }
 
+  .nav-list li {
+    margin: 0;
+  }
+
   header h4 {
     display: none;
   }
@@ -377,11 +393,11 @@ footer img {
   }
 
   h1 {
-    font-size: 46px;
+    font-size: 40px;
   }
 
   main h2 {
-    font-size: 40px;
+    font-size: 34px;
   }
 
   .text-container {
@@ -392,6 +408,14 @@ footer img {
 
   .block2-advantages {
     flex-direction: column;
+  }
+
+  .block4-container-jobs img {
+    width: 100%;
+  }
+
+  .block4-container-jobs {
+    gap: 0;
   }
 
   .block4-item1 {
@@ -408,19 +432,35 @@ footer img {
     flex-direction: column;
   }
 
-  .block5-item-container h3 {
+  .block5-item-container h4 {
     text-align: center;
   }
 
   .block6-item-container {
     flex-direction: column;
+    gap: 0;
+    h3 {
+      margin: 0;
+    }
   }
 
   .block7-wrapper div {
     flex-direction: column;
+    gap: 32px;
   }
 
   footer {
     padding: 12px 16px;
+  }
+
+  .block3-wrapper {
+    margin-top: 16px;
+  }
+
+  .block4-wrapper,
+  .block5-wrapper,
+  .block6-wrapper,
+  .block7-wrapper {
+    margin: 54px 0;
   }
 }
