--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ header a {
   display: flex;
   padding-right: 62px;
   align-items: center;
+  gap: 8px;
 }
 
 header li a {
@@ -34,25 +35,18 @@ main h2 {
   justify-content: space-between;
   align-items: center;
   padding-left: 62px;
+  gap: 60px;
 }
 
 header a img {
   width: 25px;
 }
 
-.header-wrapper a {
+header ul {
   display: flex;
-  gap: 12px;
-  align-items: center;
-}
-
-.nav-list li {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.nav-list li:last-child {
-  margin-right: 0;
+  gap: 16px;
+  list-style: none;
+  padding: 0;
 }
 
 a {
@@ -117,6 +111,7 @@ h5,
 h6 {
   font-style: normal;
   font-weight: 300;
+  font-size: 18px;
 }
 
 h2,
@@ -225,6 +220,7 @@ footer {
   background-color: #e3e3e3;
   margin: 20px -62px -62px -62px;
   padding: 20px 62px;
+  gap: 12px;
 }
 
 footer img {
@@ -232,6 +228,7 @@ footer img {
 }
 
 .footer-block {
+  font-weight: 300;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -368,9 +365,8 @@ footer img {
   .header-wrapper {
     padding-left: 12px;
     margin: 0;
-    ul {
-      padding: 0;
-    }
+    gap: 12px;
+
     a {
       font-size: 12px;
     }
@@ -380,8 +376,8 @@ footer img {
     padding-right: 12px;
   }
 
-  .nav-list li {
-    margin: 0;
+  header ul {
+    gap: 8px;
   }
 
   header h4 {
@@ -402,7 +398,7 @@ footer img {
 
   .text-container {
     width: 100%;
-    margin: 136px 0;
+    margin: 112px 0;
     padding: 0 12px;
   }
 
@@ -426,6 +422,10 @@ footer img {
   .block4-item2 {
     flex-direction: column;
     text-align: center;
+  }
+
+  .block5-item-container img {
+    width: 100%;
   }
 
   .block5-item-container {
